# docidx.hs

./: LICENSE  README.md  docidx.cabal
examples/: config  example.html
src/: docidx.hs
src/Distribution/: GhcPkgList.hs
src/Distribution/DocIdx/: Common.hs  Config.hs  Html.hs
